--- a/TODO.org
+++ b/TODO.org
@@ -10,7 +10,7 @@
   I don't use the Emacs packaging tools, so I don't really know what's
   involved.  I presume it's simple.
 
-* TODO Make it so the tests only prompt for the test blog password once
+* DONE Make it so the tests only prompt for the test blog password once
   
   That's the only thing that annoys me about running the tests right now.
 
@@ -19,7 +19,7 @@
   One thing I appreciated about org2blog (though it's implementation
   had some warts).
 
-* TODO Convert to be compatible with the Org 8.0 exporter
+* DONE Convert to be compatible with the Org 8.0 exporter
 
   I have no idea what will be involved---our own sub-exporter of html?
 
